# golfcart

./: .gitignore  Makefile  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  reading.py  skills-lock.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy-web.yml
readings/: 2026-07-17_17-32-19.json  2026-07-17_17-33-05.json
scripts/: generate_clients.sh
